# quickstart

./: .gitignore  .prettierrc.js  README.md  package.json  vue.config.js
native/: Cargo.toml  artifacts.json  package-lock.json
native/src/: lib.rs
src/: background.js  main.js
