[package]
name = "quickstart"
version = "0.1.0"
authors = ["Mark Muchane <mark@pztron.io>"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "quickstart"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
num_cpus = "1.13.0"
